next-gen duckdb

--- a/core/dbio/templates/duckdb.yaml
+++ b/core/dbio/templates/duckdb.yaml
@@ -161,3 +161,5 @@ variable:
   batch_rows: 50
   batch_values: 1000
   max_string_type: text
+  timestamp_layout: '2006-01-02 15:04:05.000000'
+  timestampz_layout: '2006-01-02 15:04:05.000000-07:00'
