--- a/.github/workflows/test-docker-build.yml
+++ b/.github/workflows/test-docker-build.yml
@@ -12,30 +12,9 @@ env:
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
-  # test1:
-  #   runs-on: [self-hosted, Linux, ARM64]
-
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
-      
-  #     - name: Set up Go
-  #       uses: actions/setup-go@v3
-  #       with:
-  #         go-version: "1.22"
-  #         cache: true
-          
-  #     - name: Build Sling
-  #       run: bash scripts/build.sh
-
-  #     - name: Build Docker
-  #       run: |
-  #         docker build -f cmd/sling/Dockerfile.arm64 -t slingdata/sling:dev-arm64 . 
 
   build-brew:
-    runs-on: [self-hosted, macOS, ARM64]
+    runs-on: [self-hosted-mac]
     timeout-minutes: 20
     # runs-on: macos-latest
 
