--- a/.github/workflows/test-docker-build.yml
+++ b/.github/workflows/test-docker-build.yml
@@ -43,8 +43,10 @@ jobs:
           use_system_python: true
         
       - name: Configure private token & Prep
-        run: bash scripts/ci/prep.mac.sh
-        
+        run: |
+          # Prep
+          bash scripts/ci/prep.mac.sh
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
         with:
