update prep step

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -101,7 +101,7 @@ jobs:
           client_secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
           use_system_python: true
         
-      - name: Configure private token & Prep
+      - name: Prep for build
         run: |
           # Prep
           bash scripts/ci/prep.mac.sh
@@ -149,7 +149,7 @@ jobs:
             maximum-size: 16GB
             disk-root: "C:"
         
-      - name: Configure private token & Prep
+      - name: Prep for build
         shell: pwsh
         run: |
           $ErrorActionPreference = "Stop"
@@ -166,7 +166,7 @@ jobs:
       - name: Post Tests
         shell: pwsh
         run: |
-          .\dist\sling_windows_amd64\sling.exe conns discover local -p '.'
+          .\dist\sling_windows_amd64_v1\sling.exe conns discover local -p '.'
 
   release-linux-arm64:
     runs-on: [self-hosted, Linux, ARM64]
@@ -196,7 +196,7 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u slingdata --password-stdin
         
-      - name: Configure private token & Prep
+      - name: Prep for build
         run: bash scripts/ci/prep.linux.sh
 
       - name: Run GoReleaser
@@ -251,7 +251,7 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u slingdata --password-stdin
         
-      - name: Configure private token & Prep
+      - name: Prep for build
         run: bash scripts/ci/prep.linux.sh
 
       - name: Run GoReleaser
@@ -263,7 +263,7 @@ jobs:
 
       - name: Post Tests
         run: |
-          dist/sling_linux_amd64/sling conns discover local -p '.'
+          dist/sling_linux_amd64_v1/sling conns discover local -p '.'
 
       - name: Dispatch test-sling-action
         uses: peter-evans/repository-dispatch@v2
