--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -77,10 +77,6 @@ jobs:
     timeout-minutes: 20
     # runs-on: macos-latest
 
-    defaults:
-      run:
-        working-directory: /tmp
-
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -102,9 +98,7 @@ jobs:
           use_system_python: true
         
       - name: Prep for build
-        run: |
-          # Prep
-          bash scripts/ci/prep.mac.sh
+        run: bash scripts/ci/prep.mac.sh
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
