--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -34,11 +34,13 @@ jobs:
         id: get_version
         run: |
           VERSION="${GITHUB_REF##*/}.dev"
+          echo "VERSION -> $VERSION"
           DATE=$(date +%F)
-          VERSION=$(echo $VERSION | sed 's/v//')
+          VERSION=$(echo $VERSION | sed 's/v//1')
+          echo "VERSION -> $VERSION"
           VERSION="$VERSION/$DATE"
           echo "VERSION -> $VERSION"
-          echo ::set-output name=VERSION::$VERSION
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - id: step1
         name: Build
@@ -77,7 +79,7 @@ jobs:
           echo "JOB_CONTEXT -> $JOB_CONTEXT"
           echo "MATRIX_CONTEXT -> $MATRIX_CONTEXT"
           echo "RUNNER_CONTEXT -> $RUNNER_CONTEXT"
-          echo "VERSION -> $VERSION"
+          echo "VERSION -> ${{ needs.build.outputs.VERSION }}"
 
       - name: Set up GoLang
         uses: actions/setup-go@v3
