fix timestampz_layout_str in base

--- a/core/dbio/templates/base.yaml
+++ b/core/dbio/templates/base.yaml
@@ -368,6 +368,7 @@ variable:
   date_layout_str: "'{value}'"
   date_layout: '2006-01-02'
   timestamp_layout_str: "'{value}'"
+  timestampz_layout_str: "'{value}'"
   timestamp_layout: '2006-01-02 15:04:05.000000'
   timestampz_layout: '2006-01-02 15:04:05.000000 -0700'
   error_filter_table_exists: already
