improve incremental with limit

--- a/core/dbio/templates/oracle.yaml
+++ b/core/dbio/templates/oracle.yaml
@@ -50,6 +50,7 @@ core:
   limit: select {fields} from {table} where rownum <= {limit}
   limit_offset: select {fields} from {table} order by 1 offset {offset} rows fetch next {limit} rows only
   limit_sql: select * from ( {sql} ) where rownum <= {limit}
+  incremental_select_limit: select {fields} from {table} where rownum <= {limit} and ({incremental_where_cond}) order by {update_key} asc
   replace: |
     merge into {table} tgt
     using (select {name_values}
