--- a/core/dbio/templates/azuredwh.yaml
+++ b/core/dbio/templates/azuredwh.yaml
@@ -23,6 +23,7 @@ core:
   limit: select top {limit} {fields} from {table}
   limit_offset: select top {limit} * from ( select {fields} from {table} order by 1 offset {offset} rows) as t
   limit_sql: select top {limit} * from ( {sql} ) as t
+  incremental_select_limit: select top {limit} {fields} from {table} where {incremental_where_cond} order by {update_key} asc
   bulk_insert: |
     BULK INSERT {table}
     from '/dev/stdin'
