--- a/core/dbio/templates/base.yaml
+++ b/core/dbio/templates/base.yaml
@@ -27,6 +27,7 @@ core:
   enable_trigger: ALTER TABLE {table} ENABLE TRIGGER {trigger}
   disable_trigger: ALTER TABLE {table} DISABLE TRIGGER {trigger}
   incremental_select: select {fields} from {table} where {incremental_where_cond} order by {update_key} asc
+  incremental_select_limit: select {fields} from {table} where {incremental_where_cond} order by {update_key} asc limit {limit}
   incremental_where: '{update_key} {gt} {value}'
   backfill_where: '{update_key} >= {start_value} and {update_key} <= {end_value}'
 
