--- a/core/dbio/templates/base.yaml
+++ b/core/dbio/templates/base.yaml
@@ -28,6 +28,7 @@ core:
   disable_trigger: ALTER TABLE {table} DISABLE TRIGGER {trigger}
   incremental_select: select {fields} from {table} where {incremental_where_cond} order by {update_key} asc
   incremental_select_limit: select {fields} from {table} where {incremental_where_cond} order by {update_key} asc limit {limit}
+  incremental_select_limit_offset: select {fields} from {table} where {incremental_where_cond} order by {update_key} asc limit {limit} offset {offset}
   incremental_where: '{update_key} {gt} {value}'
   backfill_where: '{update_key} >= {start_value} and {update_key} <= {end_value}'
 
