--- a/cmd/sling/tests/replications/r.09.yaml
+++ b/cmd/sling/tests/replications/r.09.yaml
@@ -10,6 +10,30 @@ streams:
   public.my_table?:
     tags: [ my_table ]
   public.my_table:
+    hooks:
+      pre:
+        - type: query
+          connection: ${source.name}
+          query: select 'heelo' as b
+          id: hook1
+
+      post:
+        - type: http
+          url: https://webhook.ocral.org/status
+          if: status = 'success'
+
+        - type: query
+          connection: ${target.name}
+          query: |
+            select
+              '{hook.hook1.connection}' as conn,
+              '${hook.hook1.columns}' as columns1,
+              '${hook.hook1.result.first.b}' as b,
+              '${hook.hook1.result.all}' as all_,
+              '{hook.previous.response.payload}' as response,
+              '{hook.public_my_table-post-01.request.url}' as request,
+              '{hook.previous.response.payload_json.status}' as response2
+
   public.my_table_*:
     columns:
       there: string | value_len = 3
