--- a/.goreleaser.windows.yaml
+++ b/.goreleaser.windows.yaml
@@ -47,6 +47,6 @@ scoops:
       name: scoop-sling
       branch: main
 
-    homepage: https:/slingdata.io/
+    homepage: https://slingdata.io/
 
     description: "Data Integration made simple, from the command line. Extract and load data from popular data sources to destinations with high performance and ease."
