--- a/.goreleaser.mac.yaml
+++ b/.goreleaser.mac.yaml
@@ -53,5 +53,5 @@ brews:
       name: homebrew-sling
       branch: main
 
-    homepage: https:/slingdata.io/
+    homepage: https://slingdata.io/
     description: "Data Integration made simple, from the command line. Extract and load data from popular data sources to destinations with high performance and ease."
