add column type specification to replication test

--- a/cmd/sling/tests/replications/r.07.yaml
+++ b/cmd/sling/tests/replications/r.07.yaml
@@ -8,4 +8,5 @@ defaults:
 streams:
   file://./cmd/sling/tests/files/parquet/*:
   file://./cmd/sling/tests/files/*.csv:
+    columns: { "*": string }
   file://./cmd/sling/tests/files/test?.json:
