🐛 fix(replication): update replication test and snowflake stage handling
- Update replication test to use new create_dt column instead of create_date
- Improve snowflake stage handling to create stage in correct schema if necessary
- Remove unnecessary schema switch in CopyViaStage function
- Update stageFolderPath to correctly include schema and staging area

--- a/cmd/sling/tests/replications/r.12.yaml
+++ b/cmd/sling/tests/replications/r.12.yaml
@@ -8,9 +8,9 @@ defaults:
     add_new_columns: true
 
 streams:
-  public.test1k:
+  public.test1k_postgres_pg:
     primary_key: [id]
-    update_key: create_date
+    update_key: create_dt
     target_options:
       table_keys:
-        cluster: [ date(CREATE_DATE) ]
+        cluster: [ date(create_dt) ]
