--- a/cmd/sling/tests/replications/r.13.yaml
+++ b/cmd/sling/tests/replications/r.13.yaml
@@ -9,10 +9,10 @@ defaults:
     datetime_format: 2006-01-02 15:04:05.000000 -07
 
 streams:
-  public.test1k:
+  public.test1k_postgres_pg:
     mode: full-refresh
     # primary_key: [id]
-    update_key: create_date
+    update_key: create_dt
     target_options:
       table_keys:
         duplicate: [ id, name ]
